// ---------------------------------------------------------------------------
//  Copyright (c) 2022, The .NET Foundation.
//  This software is released under the Apache License, Version 2.0.
//  The license and further copyright text can be found in the file LICENSE.md
//  at the root directory of the distribution.
// ---------------------------------------------------------------------------

syntax ="proto3";
package model;

option csharp_namespace = "Chem4Word.Model2.Converters.ProtocolBuffers";
import "Converters/ProtocolBuffers/bondStereo.proto";
import "google/protobuf/wrappers.proto";

message PBBond
{
	string Id = 1;
	string StartAtomID = 2;
	string EndAtomID = 3;
	string Order = 4;
	PBBondStereo Stereo = 5;
	google.protobuf.Int32Value Placement = 6;
}