// ---------------------------------------------------------------------------
//  Copyright (c) 2023, The .NET Foundation.
//  This software is released under the Apache License, Version 2.0.
//  The license and further copyright text can be found in the file LICENSE.md
//  at the root directory of the distribution.
// ---------------------------------------------------------------------------

syntax ="proto3";
package model;

option csharp_namespace = "Chem4Word.Model2.Converters.ProtocolBuffers";

enum PBBondStereo
{
	None = 0;
	Wedge = 1;
	Hatch = 2;
	Indeterminate = 3;
	Cis = 4;
	Trans = 5;
}