// ---------------------------------------------------------------------------
//  Copyright (c) 2024, The .NET Foundation.
//  This software is released under the Apache License, Version 2.0.
//  The license and further copyright text can be found in the file LICENSE.md
//  at the root directory of the distribution.
// ---------------------------------------------------------------------------

syntax ="proto3";
package model;

option csharp_namespace = "Chem4Word.Model2.Converters.ProtocolBuffers";
import "Converters/ProtocolBuffers/atom.proto";
import "Converters/ProtocolBuffers/bond.proto";
import "Converters/ProtocolBuffers/textualProperty.proto";
import "Converters/ProtocolBuffers/ring.proto";
import "google/protobuf/wrappers.proto";

message PBMolecule
{
	string Id = 1;
	google.protobuf.Int32Value SpinMultiplicity = 2;
	google.protobuf.Int32Value Count = 3;
	google.protobuf.Int32Value FormalCharge = 4;
	google.protobuf.StringValue DictRef = 5;
	google.protobuf.StringValue Title = 6;
	map<string,PBAtom> Atoms = 7;
	repeated PBBond Bonds = 8;
	map<string,PBMolecule> Molecules = 9;
	map<string,PBTextualProperty> Formulas = 10;
	map<string,PBTextualProperty> Names = 11;
	map<string,PBTextualProperty> Captions = 12;
	repeated PBRing Rings = 13;
}