// ---------------------------------------------------------------------------
//  Copyright (c) 2025, The .NET Foundation.
//  This software is released under the Apache License, Version 2.0.
//  The license and further copyright text can be found in the file LICENSE.md
//  at the root directory of the distribution.
// ---------------------------------------------------------------------------

syntax ="proto3";
package model;

option csharp_namespace = "Chem4Word.Model2.Converters.ProtocolBuffers";
import "Converters/ProtocolBuffers/reactionType.proto";
import "Converters/ProtocolBuffers/point.proto";
import "google/protobuf/wrappers.proto";

message PBReaction
{
	PBReactionType ReactionType = 1;
	PBPoint TailPoint = 2;
	PBPoint HeadPoint = 3;
	google.protobuf.StringValue ReagentText = 4;
	google.protobuf.StringValue ConditionsText = 5;
	string Id = 6;
	repeated string Reactants = 7;
	repeated string Products = 8;
}