// ---------------------------------------------------------------------------
//  Copyright (c) 2022, The .NET Foundation.
//  This software is released under the Apache License, Version 2.0.
//  The license and further copyright text can be found in the file LICENSE.md
//  at the root directory of the distribution.
// ---------------------------------------------------------------------------

syntax ="proto3";

package model;

option csharp_namespace = "Chem4Word.Model2.Converters.ProtocolBuffers";

enum PBReactionType
{
	Normal = 0;
	Reversible = 1;
	ReversibleBiasedForward = 2;
	ReversibleBiasedReverse = 3;
	Blocked = 4;
	Resonance = 5;
	Retrosynthetic = 6;
}